--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,14 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+.content {
+  min-height: 100vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+p {
+  @apply break-words;
 }
 
-* {
-  box-sizing: border-box;
+.swal-footer {
+  @apply text-center;
 }
