--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: Rubik;
+  src: url('/assets/font/Rubik/static/Rubik-Regular.ttf');
+}
+
 .content {
   min-height: 100vh;
 }
