page register,forgot password

--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -17,3 +17,7 @@
 .layout-form-login {
   @apply mt-5;
 }
+
+.btn-img-oauth:hover > img {
+  filter: invert(0%) sepia(100%) saturate(20%) hue-rotate(343deg) brightness(106%) contrast(104%);
+}
