--- a/components/hoc/PrivateRoute.module.css
+++ b/components/hoc/PrivateRoute.module.css
@@ -1,5 +1,5 @@
 .private-wrapper {
-  @apply flex w-full overflow-x-hidden flex-nowrap;
+  @apply flex w-full relative overflow-x-hidden flex-nowrap;
 }
 
 .sidebar {
@@ -22,6 +22,17 @@
   @apply w-full bg-white-1 transition-all duration-500;
 }
 
+.right-sidebar {
+  margin-right: -100%;
+  @apply absolute w-4/5 right-0 top-0 bottom-0 bg-white shadow-xl border border-gray-200 rounded-l-2xl;
+  @apply transition-all duration-500;
+}
+
+.right-sidebar-active {
+  margin-right: 0% !important;
+  @apply transition-all duration-500;
+}
+
 @screen sm {
   .sidebar-active {
     margin-left: 0px !important;
@@ -36,6 +47,11 @@
   }
 
   .main-content {
+    @apply w-1/2;
+  }
+
+  .right-sidebar {
+    margin-right: -70%;
     @apply w-1/2;
   }
 }
@@ -56,6 +72,11 @@
   .main-content {
     @apply w-3/5;
   }
+
+  .right-sidebar {
+    margin-right: -70%;
+    @apply w-2/5;
+  }
 }
 
 @screen lg {
@@ -73,6 +94,11 @@
 
   .main-content {
     @apply w-3/4;
+  }
+
+  .right-sidebar {
+    margin-right: -70%;
+    @apply w-1/4;
   }
 }
 
