fitur delete message

--- a/components/module/Sidebar/Sidebar.module.css
+++ b/components/module/Sidebar/Sidebar.module.css
@@ -13,7 +13,8 @@
 .sidebar-list-contacts {
   scrollbar-width: none;
   -ms-overflow-style: none;
-  height: calc(100vh - 180px);
+  /* height: calc(100vh - 180px); */
+  height: calc(100vh - 100px);
   @apply overflow-y-scroll;
 }
 
